--- a/assets/fxml/style.css
+++ b/assets/fxml/style.css
@@ -254,3 +254,13 @@
     -fx-border-style: solid;
     -fx-border-width: 2px;
 }
+
+#borderRed {
+    -fx-max-height: 1080px;
+    -fx-min-height: 1080px;
+    -fx-border-width: 1px;
+    -fx-border-style: solid;
+    -fx-border-color: red;
+    -fx-min-width: 1px;
+    -fx-max-width: 1px;
+}
